<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/dashboardGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menuLabelDashboard" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_edit_profile"
            android:title="@string/menuLabelEditProfile" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menuLabelLogout" />
    </group>


</menu>
