<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appGreyColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appGreyColor"
        android:paddingBottom="@dimen/_30sdp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="0dp"
            android:src="@drawable/ic_logo_inner"
            app:layout_constraintBottom_toTopOf="@id/gmid1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gmid1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".3" />

        <TextView
            android:id="@+id/emailLabel"
            style="@style/input_field_label_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginLabelEmail"
            app:layout_constraintLeft_toLeftOf="@id/gstart"
            app:layout_constraintTop_toBottomOf="@id/gmid1" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/input_field_edit_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/white_text_field_drawable"
            android:hint="@string/loginHintEmail"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            app:layout_constraintLeft_toLeftOf="@id/gstart"
            app:layout_constraintRight_toRightOf="@id/gend"
            app:layout_constraintTop_toBottomOf="@id/emailLabel" />


        <TextView
            android:id="@+id/etEmailError"
            style="@style/input_field_label_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginErrorEmailRequired"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@id/gstart"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />


        <TextView
            android:id="@+id/passwordLabel"
            style="@style/input_field_label_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/loginLabelPassword"
            app:layout_constraintLeft_toLeftOf="@id/gstart"
            app:layout_constraintTop_toBottomOf="@id/etEmailError" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/input_field_edit_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/white_text_field_drawable"
            android:hint="@string/loginHintPassword"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            app:layout_constraintLeft_toLeftOf="@id/gstart"
            app:layout_constraintRight_toRightOf="@id/gend"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel" />


        <TextView
            android:id="@+id/etPasswordError"
            style="@style/input_field_label_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginErrorPasswordRequired"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="@id/gstart"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/input_field_label_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/loginLabelForgotPassword"
            app:layout_constraintLeft_toLeftOf="@id/gstart"
            app:layout_constraintRight_toRightOf="@id/gend"
            app:layout_constraintTop_toBottomOf="@id/etPasswordError" />


        <RelativeLayout
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/appGreenColor"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/gstart"
            app:layout_constraintRight_toRightOf="@id/gend"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
            tools:targetApi="m">

            <TextView
                style="@style/btn_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableStart="@drawable/ic_login_btn_icon"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/loginBtnLogin" />


        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>